--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <p>Please select an option below:</p>
 
     <a href="https://forms.cloud.microsoft/r/zSBhjTvFeQ" target="_blank" class="btn-custom">📝 Feedback</a>
-    <a href="https://forms.cloud.microsoft/r/zSBhjTvFeQ" target="_blank" class="btn-custom">📢 Complaint</a>
+    <!a href="https://forms.cloud.microsoft/r/zSBhjTvFeQ" target="_blank" class="btn-custom">📢 Complaint<!/a>
 
     <p class="footer">
       Dear Customer, Delighting you is always our top priority.
@@ -116,3 +116,4 @@
   </div>
 </body>
 </html>
+
