--- a/index.html
+++ b/index.html
@@ -109,12 +109,11 @@
     <a href="https://forms.cloud.microsoft/r/zSBhjTvFeQ" target="_blank" class="btn-custom">📝 Feedback</a>
     <a href="https://forms.cloud.microsoft/r/zSBhjTvFeQ" target="_blank" class="btn-custom">📢 Complaint</a>
 
-    <p class="footer">
-      Dear Customer, Delighting you is always our top priority.
-      Your feedback helps us serve you better and provide you with the best experience.
+    <p class="footer"
     </p>
   </div>
 </body>
 </html>
+
 
 
