--- a/index.html
+++ b/index.html
@@ -18,14 +18,8 @@
       margin: 0;
     }
 
-    @keyframes gradientShift {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-
     .container {
-      background: #ffffff; /* Solid white */
+      background: #ffffff; 
       padding: 30px 25px;
       border-radius: 20px;
       box-shadow: 0 10px 30px rgba(0, 0, 0, 0.25);
@@ -114,6 +108,7 @@
   </div>
 </body>
 </html>
+
 
 
 
