--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
     </h1>
     <p class="sub">Please select an option below:</p>
 
-    <a class="btn-pill" href="https://forms.cloud.microsoft/r/zSBhjTvFeQ" target="_blank" rel="noopener">
+    <a class="btn-pill" href="https://forms.office.com/r/urhkcMDs73" target="_blank" rel="noopener">
       <span class="emoji">📝</span> Feedback
     </a>
 
-    <a class="btn-pill" href="https://forms.cloud.microsoft/r/zSBhjTvFeQ" target="_blank" rel="noopener">
+    <a class="btn-pill" href="https://forms.office.com/r/ir1y4mznCH" target="_blank" rel="noopener">
       <span class="emoji">📢</span> Complaint
     </a>
 
@@ -136,3 +136,4 @@
   </div>
 </body>
 </html>
+
